# TradePilot

./: LICENSE  README.md  main.py  pyproject.toml
src/: client.py  config.json  main.py  register.py
src/account/: _fetch_account_info.py  fetch_account_balance.py  fetch_account_currency.py  fetch_account_equity.py  fetch_account_info.py  fetch_account_leverage.py  fetch_account_type.py  fetch_account_used_margin.py  fetch_free_margin.py  fetch_margin_level.py  fetch_trade_stats.py
src/connection/: initialize.py  login.py  shutdown.py
src/connection/terminal/: _fetch_terminal_info.py  check_connection_status.py  check_trading_status.py  fetch_terminal_info.py
src/history/: fetch_deals.py  fetch_deals_count.py  fetch_orders.py  fetch_orders_count.py
src/market/: fetch_historical_candles.py  fetch_latest_candles.py  fetch_symbol_info.py  fetch_symbol_price.py  fetch_symbols.py  fetch_symbols_by_group.py
src/orders/calculations/: calculate_lot_size.py  calculate_margin.py  calculate_price_targets.py  calculate_profit.py
src/orders/cancellers/: cancel_all_pending_orders.py  cancel_order.py  cancel_pending_order_by_id.py  cancel_pending_order_by_symbol.py
src/orders/closers/: close_all_losing_positions.py  close_all_positions.py  close_all_positions_by_symbol.py  close_all_profitable_positions.py  close_position_by_id.py
src/orders/fetchers/: fetch_all_pending_orders.py  fetch_all_positions.py  fetch_pending_order_by_id.py  fetch_pending_orders.py  (+6 more)
src/prompts/: prompts.py
src/resources/: resources.py
src/utils/: logger.py  mcp_client.py  mt5_client.py
(+14 files in other folders)
