[project]
name = "tradepilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "langchain-google-genai>=2.1.4",
    "mcp-use>=1.2.13",
    "mcp[cli]>=1.7.1",
    "metatrader5>=5.0.4993",
]
